@@ -1,3 +1,7 @@
+Wed Sep 03 22:04:45 2003 GMT  Holger Bochnig <hbgg@gmx.net>
+
+	* gtkmet.c (UpdateTable): avoid buffer overflow
+
 Wed Sep  3 20:07:45 2003  Joern Thyssen  <jth@gnubg.org>
 
 	* sgf.c (WriteLuck): uses 5 digits for luck to avoid
